<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bold"
                android:text="@string/title"
                android:textColor="@color/primary"
                android:textSize="@dimen/_46ssp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/regular"
                android:text="@string/sub_title"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp">

                <EditText
                    android:id="@+id/yourName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_46sdp"
                    android:background="@null"
                    android:fontFamily="@font/bold"
                    android:hint="@string/your_name"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColorHint="@color/hint" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                app:cardElevation="@dimen/_4sdp">

                <EditText
                    android:id="@+id/partnerName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_46sdp"
                    android:background="@null"
                    android:fontFamily="@font/bold"
                    android:hint="@string/partner_name"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColorHint="@color/hint" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/calculateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="@dimen/_50sdp"
                app:cardElevation="@dimen/_4sdp">

                <ImageView
                    android:layout_width="@dimen/_72sdp"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_heart" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            android:visibility="gone">

            <TextView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bold"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="@dimen/_46ssp" />

            <TextView
                android:id="@+id/resultView"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/bold"
                android:text="@string/result"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_16ssp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/percentView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_128sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/bold"
                        android:text="%"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_26ssp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/bold"
                android:text="@string/share"
                android:textSize="@dimen/_12ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_6sdp"
                        android:fontFamily="@font/bold"
                        android:text="Instagram"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_10ssp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_6sdp"
                        android:fontFamily="@font/bold"
                        android:text="WhatsApp"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_10ssp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_6sdp"
                        android:fontFamily="@font/bold"
                        android:text="Facebook"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_10ssp" />


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>



</ScrollView>